Readme - Fixing the works - Update

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ Screenshot from 2021-01-26 09-10-13.png
 Screenshot from 2021-01-26 09-14-23.png
 Screenshot from 2021-01-26 09-15-37.png
 Screenshot from 2021-01-26 09-17-19.png
+Workshop and others/Randstad-CVFundamentals-2021.01.21.mp4
